fixed url for article 3, border and hover, added article info

--- a/static/html/sections/article_1.html
+++ b/static/html/sections/article_1.html
@@ -7,49 +7,42 @@
 {% endblock %}
 
 {% block content %}
-<div class = "container">
-    <h1>Diversity and Inclusion 1, or Diversity VS Inclusion?</h1>
-    <h2>by Mollie Zhang</h2>
-    <h2>16. November 2019</h2>
+<div class = "narrative">
+    <div class = "introduction">
+        <div class = "row">
+            <div class = "col-md-1"></div>
+            <div class = "col-md-10">
+                <h1>Diversity VS Inclusion</h1>
+                <h2>by Colton Poore</h2>
+            </div>
+            <div class = "col-md-1"></div>
+        </div>
+    </div>
+
+
 
     <div class = "row">
-        <div class = "col-md-1"></div>
-        <div class = "col-md-5">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
-        </div>
-        <!-- <div class = "col-md-1"></div> -->
-        <div class = "col-md-5">
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8">
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
-            </p>
-            <p>
-                To answer this question, the thought curation team designed an experiment. The editorial team is split into two separate groups to
-                compete against each other and design a recruitment process for “Triple A multimedia design fraternity. ” However, what the two
-                teams don’t know is the fact that they are working on different prompts: one team is designing a selective and diverse recruitment
-                process, while the other team is focusing on a selective and inclusive process.
-
-            </p>
-            <p>
-
-                The two teams were given three weeks to develop their recruitment process, and presented in front of the entire team. We revealed
-                the difference in their prompts right before they present to preserve the independence of their design thinking. The following
-                will point out some major differences between the two design processes.
+                A friend once told me that diversity is inviting everyone to your party, and
+                inclusivity is getting them to want to come and dance.  Of course, not everyone you
+                invite will come, and not all of them that come will have a fun time. So if diversity
+                is everyone you invite, and inclusivity is everyone who comes
             </p>
         </div>
-        <div class = "col-md-1"></div>
+        <div class = "col-md-2"></div>
     </div>
 
     <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" />
 
 
     <div class = "row">
-        <div class="col-md-12">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
             <h3>Definition of Inclusivity and Diversity</h3>
         </div>
-    </div>
-    <div class = "row">
+        <div class = "col-md-2"></div>
         <div class = "col-md-3"></div>
         <div class = "col-md-3">The inclusivity team defined inclusivity as “communication, compromising, understanding, and willingness to include.” </div>
         <div class = "col-md-3">The diversity team emphasized diversity in people’s skills. They expect their brothers to be experts in diverse areas of design.</div>
@@ -109,7 +102,7 @@
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <h2>Mollie Zhang</h2>
-            <h2>Computer Sciecne</h2>
+            <h4>Computer Science</h4>
             <p>
                 It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
                 we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
@@ -119,14 +112,12 @@
         <div class = "col-md-1"></div>
     </div>
 
-    <div class = "row interact">
-        <div class = "col-md-3"></div>
-        <div class = "col-md-6">
-            <label>Write your thoughts here.</label>
-            <input id="thoughts" type="text"/>
+    <div class = " interact">
+            <label><p>
+                Write your thoughts here.
+                </p></label>
+            <input id="thoughts" type="text" placeholder = "press enter to clear" autofocus/>
             <div class = "fallarea"></div>
-        </div>
-        <div class = "col-md-3"></div>
     </div>
 </div>
 {% endblock %}
