--- a/static/html/sections/article_2.html
+++ b/static/html/sections/article_2.html
@@ -7,22 +7,28 @@
 {% endblock %}
 
 {% block content %}
-<div class = "container">
-    <h1>Diversity and Inclusion 2, or Diversity VS Inclusion?</h1>
-    <h2>by Mollie Zhang</h2>
-    <h2>16. November 2019</h2>
+<div class = "narrative">
+    <div class = "introduction">
+        <div class = "row">
+            <div class = "col-md-1"></div>
+            <div class = "col-md-10">
+                <h1>Diversity and Inclusion 1, or Diversity VS Inclusion?</h1>
+                <h2>by Mollie Zhang</h2>
+            </div>
+            <div class = "col-md-1"></div>
+        </div>
+    </div>
 
     <div class = "row">
         <div class = "col-md-1"></div>
         <div class = "col-md-5">
             <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
         </div>
-        <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram, we
+                discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally. And
+                the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
             </p>
             <p>
                 To answer this question, the thought curation team designed an experiment. The editorial team is split into two separate groups to
@@ -32,43 +38,75 @@
 
             </p>
             <p>
-
                 The two teams were given three weeks to develop their recruitment process, and presented in front of the entire team. We revealed
-                the difference in their prompts right before they present to preserve the independence of their design thinking. The following
-                will point out some major differences between the two design processes.
+                the difference in their prompts right before they present to preserve the independence of their design thinking. The following will
+                point out some major differences between the two design processes.
             </p>
         </div>
         <div class = "col-md-1"></div>
     </div>
 
-    <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" />
+    <!-- <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" /> -->
 
 
     <div class = "row">
-        <div class="col-md-12">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
             <h3>Definition of Inclusivity and Diversity</h3>
         </div>
-    </div>
-    <div class = "row">
+        <div class = "col-md-2"></div>
         <div class = "col-md-3"></div>
         <div class = "col-md-3">The inclusivity team defined inclusivity as “communication, compromising, understanding, and willingness to include.” </div>
         <div class = "col-md-3">The diversity team emphasized diversity in people’s skills. They expect their brothers to be experts in diverse areas of design.</div>
         <div class = "col-md-3"></div>
     </div>
+
     <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
+            <h3>Written Application </h3>
+        </div>
+        <div class = "col-md-2"></div>
+
         <div class = "col-md-2"></div>
         <div class = "col-md-8">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                The two teams both chose to use written application as their first stage of recruitment process. The applicants will submit an
+                application form, and the brothers in the organization will evaluate based on their response.
             </p>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
+            <h3>The Inclusive Team </h3>
+        </div>
+        <div class = "col-md-2"></div>
+
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                To evaluate the applicant’s passion while giving both potential and mature designers equal opportunity, the inclusive team
+                decides to pick a variety of prompts and ask the applicants to critique three pieces of their choice. The team provides a
+                total of nine prompts in three categories: branding identity, photography, and CAD.
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
+
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 subtitle">
+            <h3>The Diverse Team </h3>
+        </div>
+        <div class = "col-md-2"></div>
+
+        <div class = "col-md-2"></div>
+        <div class = "col-md-8">
+            <p>
+                The diverse team aims to design an application process that classifies the applicants for them and builds a basis for picking
+                equally from different design fields. Thus, their application requires applicants not only to respond to a prompt, but also
+                requires them to submit three or more past designs reflecting their strength.
             </p>
         </div>
         <div class = "col-md-2"></div>
@@ -119,14 +157,12 @@
         <div class = "col-md-1"></div>
     </div>
 
-    <div class = "row interact">
-        <div class = "col-md-3"></div>
-        <div class = "col-md-6">
-            <label>Write your thoughts here.</label>
-            <input id="thoughts" type="text"/>
+    <div class = " interact">
+            <label><p>
+                Write your thoughts here.
+                </p></label>
+            <input id="thoughts" type="text" placeholder = "press enter to clear" autofocus/>
             <div class = "fallarea"></div>
-        </div>
-        <div class = "col-md-3"></div>
     </div>
 </div>
 {% endblock %}
