--- a/static/html/sections/article_3.html
+++ b/static/html/sections/article_3.html
@@ -7,95 +7,220 @@
 {% endblock %}
 
 {% block content %}
-<div class = "container">
-    <h1>Diversity and Inclusion 3, or Diversity VS Inclusion?</h1>
-    <h2>by Mollie Zhang</h2>
-    <h2>16. November 2019</h2>
+<div class = "narrative">
+    <div class = "introduction">
+        <div class = "row">
+            <div class = "col-md-1"></div>
+            <div class = "col-md-10">
+                <h1>Cocktail Lounge</h1>
+                <h2>by Jennifer Lee</h2>
+            </div>
+            <div class = "col-md-1"></div>
+        </div>
+    </div>
 
     <div class = "row">
         <div class = "col-md-1"></div>
         <div class = "col-md-5">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+            <img src="{% static 'imgs\dni\cocktailpast1.jpg' %}" class="img-fluid"/>
         </div>
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
             <p>
-                It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
-                we discovered that whenever we try to improve diversity of a design, its inclusivity will be the cost and decrease proportionally.
-                And the following question thus came to us: will we be able to discuss enhancing diversity AND inclusion simultaneously in our writing?
+                If it is your first, second, or third year at Cornell, you have not seen Cocktail Lounge before her glow-up. Created in 1942,
+                the lounge houses students with questionable sleeping habits. The 24/7 study is located in equidistant to North Campus, West
+                Campus, and Collegetown-- the three most popular student residencies. The Cocktail Lounges distance to students’ homes, libraries,
+                and Willard Straight Hall, allow students to grab a quick coffee and bagel or popcorn and a three course meal.
             </p>
             <p>
-                To answer this question, the thought curation team designed an experiment. The editorial team is split into two separate groups to
-                compete against each other and design a recruitment process for “Triple A multimedia design fraternity. ” However, what the two
-                teams don’t know is the fact that they are working on different prompts: one team is designing a selective and diverse recruitment
-                process, while the other team is focusing on a selective and inclusive process.
-
-            </p>
-            <p>
-
-                The two teams were given three weeks to develop their recruitment process, and presented in front of the entire team. We revealed
-                the difference in their prompts right before they present to preserve the independence of their design thinking. The following
-                will point out some major differences between the two design processes.
+                However, this piece isn’t an advertisement for the lounge. As a sophomore in the College of Engineering, my freshman year was
+                filled with more hours exploring the iconic chain of Engineering buildings, Upson-Duffield-Phillips, and grabbing some ramen at
+                Trillium after my CS 1110 lecture. Furthermore my nights were spent in the lounges of Court-Kay Bauer, spoiled by the AC, AC and AC.
             </p>
         </div>
         <div class = "col-md-1"></div>
     </div>
 
-    <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/1440x900" />
-
-
     <div class = "row">
-        <div class="col-md-12">
-            <h3>Definition of Inclusivity and Diversity</h3>
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 ">
+            <h3>What was old Cocktail lounge like?</h3>
+            <p>
+                Correct me if I’m wrong, but from my research the Cocktail Lounge was the SPOT for night owls. The lounge was filled with noises of
+                opening chips bags, whispers of late night confessions, and the constant in and outflow of students studying before or after some
+                collegetown parties. She was homey and relaxed allowing students to feel comfortable, napping, eating, talking, etc. She lived up
+                to her name minus the alcohol.
+            </p>
         </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 ">
+            <h3>What is the new Cocktail Lounge like?</h3>
+            <p>
+                This time Facebook message me if I'm wrong, but from my personal experience the Cocktail Lounge now does a better job of fostering a
+                clinical space, but yes, it does get loud sometimes. I personally love the Cocktail Lounge because I am not the quietest person on
+                earth especially if my friends are just a desk away. The location is so convenient (close to where I work, live, and study). It is
+                fairly close to  the Engineering Quad, but far enough so I don’t coincidentally run into everyone I know. The Cocktail Lounge’s
+                minimalist, chic, new-decade style is equivalent to that of a sheltered college freshman going to 20 O-week parties with their O-Week
+                friends that they’re never going to talk to again. Similar to the lounge, that freshman can be considered an icon living their full lives
+                by some and the rock bottom of humanity by others.
+            </p>
+            <p>
+                No hate, honestly. I love the Cocktail Lounge. I’m there all the time. HMU my hours are 3-8 AM Monday, Tuesday, Wednesday, Thursday,
+                Friday (if they’re open after cleaning), Saturday, and Sunday. I’m an asian girl with round glasses, who looks like an international
+                student, but speaks like she’s been living in America for more than her lifespan.
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
+    </div>
+
+    <img src="{% static 'imgs\dni\cocktailnow1.jpg' %}" class="img-fluid"/>
+
+    <div class = "row">
+        <div class = "col-md-2"></div>
+        <div class="col-md-8 ">
+            <h3>The super biased survey I sent out:</h3>
+            <p>
+                As a previous worshipper and lover of the Cocktail Lounge, I did not understand the controversy people had with the new renovations. So
+                I uploaded onto my SnapChat and Instagram story for my biggest fans to reply to me. I had to filter through SO many results I spent HOURS
+                on my app.
+            </p>
+            <p>
+                Here is what I uploaded (very professional I know, I’m basically a full blown journalist):
+            </p>
+        </div>
+        <div class = "col-md-2"></div>
     </div>
     <div class = "row">
-        <div class = "col-md-3"></div>
-        <div class = "col-md-3">The inclusivity team defined inclusivity as “communication, compromising, understanding, and willingness to include.” </div>
-        <div class = "col-md-3">The diversity team emphasized diversity in people’s skills. They expect their brothers to be experts in diverse areas of design.</div>
-        <div class = "col-md-3"></div>
+        <div class = "col-md"></div>
+        <div class = "col-md-3">
+            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+        </div>
+        <div class = "col-md-3">
+            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+        </div>
+        <div class = "col-md-3">
+            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/445x500" />
+        </div>
+        <div class = "col-md"></div>
     </div>
+
     <div class = "row">
         <div class = "col-md-2"></div>
         <div class = "col-md-8">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <p>In conclusion here are some pros and cons of the Cocktail Lounge.</p>
+            <table class = "table">
+                <thead>
+                    <tr>
+                        <th><h3>Pros</h3></th>
+                        <th><h3>Cons</h3></th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Looks new, clean</td>
+                        <td>Clinical and cold</td>
+                    </tr>
+                    <tr>
+                        <td>Reservable group study spaces</td>
+                        <td>Group study spaces are not soundproof</td>
+                    </tr>
+                    <tr>
+                        <td>Outlets everywhere</td>
+                        <td>People everywhere and very close together might be a fire hazard?</td>
+                    </tr>
+                    <tr>
+                        <td>Reminds you when the library is about to close</td>
+                        <td>Reminder is a loud bell.</td>
+                    </tr>
+                    <tr>
+                        <td>Easy to communicate with people you are working with</td>
+                        <td>Easy to talk to your friends</td>
+                    </tr>
+                    <tr>
+                        <td>Couches are comfortable</td>
+                        <td>People sleep on the couches</td>
+                    </tr>
+                    <tr>
+                        <td>Vending machines give you good midnight snacks</td>
+                        <td>But you can’t use quarters and BRBs and the coffee machine is constantly out of coffee and only has hot water</td>
+                    </tr>
+                    <tr>
+                        <td>Nice filtered water to be environmentally friendly</td>
+                        <td>Filter is not exchanged out when it isn’t a good filter anymore.</td>
+                    </tr>
+                    <tr>
+                        <td>Bathrooms are automatic so it is cleaner</td>
+                        <td>People are nasty and cleaning isn't done regularly because it disturbs students when they’re studying and can’t go to the
+                            bathroom and they study 24/7 because Cocktail Lounge is open 24/7</td>
+                    </tr>
+                    <tr>
+                        <td>The C tables so that you can study with them at the couches</td>
+                        <td>They don’t fit underneath the couches so you have to manspread really widely and try to fit the desks in between your legs
+                            and that is not comfortable.</td>
+                    </tr>
+                    <tr>
+                        <td>There is a lot of seating and the Cocktail Lounge can fit a lot of people</td>
+                        <td>Everyone is breathing everyone’s breath and it’s so dense people are going to die</td>
+                    </tr>
+                    <tr>
+                        <td>Really good view of the slope</td>
+                        <td>When it’s sunset the sunset hits your eyes and you’re temporarily blinded for a day</td>
+                    </tr>
+                    <tr>
+                        <td>Minimalist, but can be homey</td>
+                        <td>People take off their shoes and because of the cocktail lounge’s bad ventilation it stinks up the entire place.</td>
+                    </tr>
+                    <tr>
+                        <td>There is individual lights for everyone</td>
+                        <td>They’re in the middle of the desk so you can’t put your laptop in the middle or anything towards the middle it’s just offset.</td>
+                    </tr>
+                    <tr>
+                        <td>They optimize space</td>
+                        <td>You can play accidental footsie from the person across from you</td>
+                    </tr>
+                    <tr>
+                        <td>The orange wall of random words</td>
+                        <td>There is no downside to this. Cornell students are poets. And immature.</td>
+                    </tr>
+                    <tr>
+                        <td>It’s exclusivity (scan keycard at the door, alarm when the door is left open to alert students of the safety risk)</td>
+                        <td>The annoying alarm. You can also get into the cocktail lounge using the door to Uris library. Just why.</td>
+                    </tr>
+
+                </tbody>
+            </table>
+
         </div>
         <div class = "col-md-2"></div>
-    </div>
-
-    <div class = "row">
-        <div class = "col-md-1"></div>
-        <div class = "col-md-10">
-            <img alt = "random" class = "img-fluid" src = "https://source.unsplash.com/random/" />
-        </div>
-        <div class = "col-md-1"></div>
     </div>
 
     <div class = "row">
         <div class = "col-md-2"></div>
         <div class = "col-md-8">
+            <p><b>So why did they do all this?</b></p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Apparently the designers have taken student feedback when choosing the furniture, aiming to find a balance between
+                uncomfortable versus comfortable furniture-- comfortable enough so there is no pain, but uncomfortable so the students
+                do not fall asleep.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                In conclusion, the cocktail lounge will not be able to satisfy all students unless it became 20 different study spaces
+                at once, but optimizing the campus so that there is somewhere on campus where everyone can go is the best. I have redesigned
+                the cocktail lounge so it is the best for me and my studying habits here:
+            </p>
+
+            <p><b>Try designing yours.</b></p>
+            <p>
+                Any public space will not be a one-size-fits-all sort of situation. That is like having pants for everyone to share and wear.
+                The pants will be too long, fit too tight, fit too loose, too short, blah blah blah. Just like how the cocktail lounge is too
+                loud, too studious, too clinical, too blah blah blah. What should happen is a flexible work space. Something that is
+                interchangeable and flexible so it can accommodate the student who can only work in silent spaces and also accomodate the student
+                who likes having noise as a sort of white noise.
             </p>
         </div>
         <div class = "col-md-2"></div>
@@ -108,7 +233,7 @@
         </div>
         <!-- <div class = "col-md-1"></div> -->
         <div class = "col-md-5">
-            <h2>Mollie Zhang</h2>
+            <h2>Jennifer Lee</h2>
             <h2>Computer Sciecne</h2>
             <p>
                 It started with a conversation among the thought curators on the Editorial team. After Colton’s proposal of the “donut” diagram,
@@ -119,14 +244,12 @@
         <div class = "col-md-1"></div>
     </div>
 
-    <div class = "row interact">
-        <div class = "col-md-3"></div>
-        <div class = "col-md-6">
-            <label>Write your thoughts here.</label>
-            <input id="thoughts" type="text"/>
+    <div class = " interact">
+            <label><p>
+                Write your thoughts here.
+                </p></label>
+            <input id="thoughts" type="text" placeholder = "press enter to clear" autofocus/>
             <div class = "fallarea"></div>
-        </div>
-        <div class = "col-md-3"></div>
     </div>
 </div>
 {% endblock %}
