--- a/static/html/sections/d&i.html
+++ b/static/html/sections/d&i.html
@@ -17,7 +17,7 @@
         <div class="arrow"></div>
       </div>
   </div>
-  <div class="narrative__definition container" id = "opening">
+  <div class="narrative__definition " id = "opening">
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10 narrative__definition__text fade_in">
@@ -30,59 +30,68 @@
   </div>
   <div class="fullscreen-background container">
       <div class="fullscreen-background__text intro">
-          This year medium design collective explores what it means to be
-          <div class = "holographic">diverse and inclusive.</div>
+          This year Medium Design Collective is taking a deep dive into the topic of
+          <div class = "holographic">diversity and inclusion.</div>
           <br />
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p>
+              What does diversity and inclusion mean to us as designers? How does it influence the way we understand topics
+              such as accessibility, disability, bias, identity, and exclusion? How does this theme emerge in different fields
+              such as tech, culture, and society?
+          </p>
+          <br />
+          <br />
+          <p>
+              Below are some articles that explores the idea of what it means to be diverse and inclusive.
+          </p>
+
       </div>
   </div>
   <div class="fullscreen-background container">
       <div class = "row">
           <div class="col-md"></div>
-          <div class = "col-md-3 article border">
+          <div class = "col-md-3 article border" id = "article_1">
               <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
-              "most striking quote from the article written here"
+              "A friend once told me that diversity is inviting everyone to your party, and inclusivity is getting them to want to come
+              and dance."
               <br />
               <div class = "detail">
-                  Title
-                  <br />
+                  <h4><b>Diversity Vs. Inclusivity</b></h4>
                   Colton Poore
               </div>
               <div class="col text-center">
-                  <a href="/article/1"><button type="button" class="articleBtn">READ</button></a>
+                  <a href="/article/1"><button type="button" class="articleBtn" id = "button_1">READ</button></a>
               </div>
           </div>
-          <div class = "col-md-3 article border">
+          <div class = "col-md-3 article border" id = "article_2">
               <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
               "most striking quote from the article written here"
               <br />
               <div class = "detail">
-                  Title
-                  <br />
+                  <h4><b>Diversity and Inclusion, or Diversity VS Inclusion?</b></h4>
                   Mollie Zhang
               </div>
               <div class="col text-center">
-                    <a href="/article/2"><button type="button" class="articleBtn">READ</button></a>
+                    <a href="/article/2"><button type="button" class="articleBtn" id = "button_2">READ</button></a>
               </div>
           </div>
-          <div class = "col-md-3 article border">
-              <img src = "https://source.unsplash.com/random/340x500" class = "img-fluid"/>
-              "most striking quote from the article written here"
+          <div class = "col-md-3 article border" id = "article_3">
+              <img src="{% static 'imgs\dni\cocktailpast1.jpg' %}" class="img-fluid"/>
+              "The Cocktail Lounge’s minimalist, chic, new-decade style is equivalent to that of a sheltered college freshman going to
+              20 O-week parties with their O-Week friends that they’re never going to talk to again."
               <br />
               <div class = "detail">
-                  Title
-                  <br />
+                  <h4><b>Cocktail Lounge</b></h4>
                   Jennifer Lee
               </div>
               <div class="col text-center">
-                  <a href="/article/3"><button type="button" class="articleBtn">READ</button></a>
+                  <a href="/article/3"><button type="button" class="articleBtn" id = "button_3">READ</button></a>
               </div>
 
           </div>
           <div class="col-md"></div>
       </div>
   </div>
-  <div class="narrative__countdown container">
+  <!-- <div class="narrative__countdown container">
     <div class="narrative__message row">
       <div class="col-md-4"></div>
       <div class="col-md-4">coming soon</div>
@@ -108,7 +117,7 @@
       </div>
       <div class="col-md-3"></div>
     </div>
-  </div>
+  </div> -->
   <div class = "end-m">
       <center>
           <h3><b>- m -</b></h3>
